# atomyx

./: .dependency-cruiser.cjs  .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  coverage-baseline.json  package-lock.json  package.json  tsconfig.json
.changeset/: README.md  config.json  v0-1-0-foundation.md
android/: README.md  settings.gradle.kts
api-snapshots/: android-driver.api.md  core.api.md  driver-wire.api.md  driver.api.md  ios-driver.api.md  ios-sim-driver.api.md  mcp.api.md  script.api.md  shared.api.md  sidecar.api.md  skills.api.md
apps/studio/src-tauri/: .taurignore  Cargo.toml  entitlements.plist  tauri.conf.json
apps/studio/src-tauri/capabilities/: default.json
apps/studio/src-tauri/helpers/: .gitignore
apps/studio/src-tauri/helpers/atomyx-sim-capture/: Info.plist  build.sh  entitlements.plist  main.swift
apps/studio/src-tauri/helpers/atomyx-sim-hid/: Info.plist  README.md  build.sh  entitlements.plist  main.swift
apps/studio/src-tauri/resources/: .gitignore
apps/studio/src-tauri/src/: commands.rs  lib.rs  logs.rs  main.rs  sidecar.rs
apps/studio/src-tauri/src/mirror/: commands.rs  h264.rs  mod.rs  sck.rs  scrcpy.rs  session.rs
docs/: README.md  architecture.md  development.md  device-setup.md  getting-started.md  ios.md  pitfalls.md  pointer.md  tools.md  yml-script-reference.md
examples/: README.md  api-branching.yml  api-capture-assert.yml  checkout-regression.scenario.yml  composed-flow.yml  run-timeline-demo.yml  test-login-flow.yml
ios/: README.md
scripts/: ios-driver-call.mjs  (+19 more)
(+611 files in other folders)
