[package]
name = "atomyx-studio"
version = "0.1.0"
description = "Atomyx Studio — desktop IDE for authoring and running Atomyx YAML test scripts."
authors = ["Solrum"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "atomyx_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
notify = "6"
portable-pty = "0.8"
base64 = "0.22"
libc = "0.2"


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# Dev profile is tuned for build-cache size, not raw compile speed.
# Studio code keeps full debuginfo so breakpoints + backtraces stay
# meaningful; transitive deps drop debuginfo because we almost never
# step into them and the per-dep DWARF blocks dominate
# `target/debug/deps` (multi-GB on every fresh build).
[profile.dev]
debug = "full"
incremental = true
split-debuginfo = "unpacked"

[profile.dev.package."*"]
debug = 0
